--- a/models/raw/src_globalmart.yml
+++ b/models/raw/src_globalmart.yml
@@ -2,13 +2,16 @@ version : 2
 
 sources:
   - name: GLOBALMART
+    description: a clone of the Snowflake database
     database: RAW
     schema: GLOBALMART
     tables:
       - name: CUSTOMER
       - name: ORDERS
+        description: raw orders table
         columns:
           - name: orderid 
+            description: primary key of the orders
             tests:
               - unique
               - not_null
